--- a/stylee.css
+++ b/stylee.css
@@ -1,1 +1,166 @@
+*{
+    margin: 0;
+    padding: 0;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+.first{
+    margin-bottom: 100px;
+}
+.container-fluid .navbar-brand{
+    border-radius: 10px;
+    padding: 5px 30px;
 
+}
+.navbar-nav .nav-item .nav-link{
+    font-size: 1.2em;
+    margin: 0px 20px;
+}
+form button{
+    margin-right: 80px;
+}
+.col-md-6 img{
+    /* background-color: #010101;  */
+    width: 100%;
+    height: 72vh;
+}
+.btnclass button{
+    margin-top: 40px;
+    margin-right: 30px;
+}
+.row .col-md-6 p,h1{
+    margin-top: 20px;
+    font-size: 20px;
+}
+.second .col-md-7 img{
+    width:100%;
+    height: 70vh;
+    
+}
+
+.second .col-md-5{
+    margin-top: 40px;
+}
+.second .col-md-5 table{
+    margin-top: 40px;
+}
+.second .col-md-5 h1{
+    font-weight: 700;
+}
+/* .second .col-md-7{
+    border: 2px solid red;
+}
+.second .col-md-5 table {
+    border: 2px solid red;
+} */
+.second table th{
+    color: yellow;
+    font-size: 40px;
+}
+.second table tr{
+    /* color: yellow; */
+    font-size: 20px;
+    font-family: sans-serif;
+    letter-spacing: 1px;
+}
+
+.third{
+    /* border: 2px solid red; */
+    overflow: hidden;
+}
+
+.third .card-group img{
+    background-color: #fff;
+    /* border: 2px solid red; */
+    height: 160px;
+    width: 100%;
+}
+
+.forth{
+    /* border: 2px solid red; */
+    overflow: hidden;
+}
+.row .carouselExampleCaptions{
+    border: 2px solid red;
+}
+
+/* carousel */
+.row .col-md-7 .carddd{
+ margin-bottom: 100px;
+}
+.row .col-md-7 .carddd .card{
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    height: 200px;
+border-radius: 10px;
+}
+#row{
+    background-color: rgb(239, 237, 237);
+}
+.forth  h1{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 30px;
+    font-weight: 800;
+    word-spacing: 2px;
+}
+.forth .row .col{
+    
+    padding: 40px 0px;
+    padding-left:80px ;
+}
+.forth .col{
+    background-color: yellow;
+}
+
+.fifth{
+    overflow: hidden;
+}
+/* .fifth img{
+    border: 2px solid red;
+} */
+.fifth .person_near{
+    padding: 50px;
+    font-weight: 800;
+}
+.fifth .person_near button{
+    color: black;
+    background-color: yellow;
+}
+.fifth table{
+    /* border: 2px solid red; */
+    margin-left: 40px;
+    
+}
+.fifth table span{
+    font-size: 26px;
+    font-weight: 800;
+}
+.fifth table p{
+    font-size: 10px;
+}
+
+.sixth{
+    /* border: 2px solid red; */
+    overflow: hidden;
+}
+.sixth h1{
+    font-size: 26px;
+    font-weight: 800;
+}
+
+footer{
+overflow: hidden;
+    background: #000;
+    color: aliceblue;
+}
+footer h1{
+    text-align: center;
+}
+footer h1:hover{
+    color:yellow;
+}
+footer .row .col-md-3 p{
+    margin-top: 50px;
+margin-left: 100px;
+}
+footer .row .col-md-3 p:hover{
+    color: yellow;
+}
