--- a/stylee.css
+++ b/stylee.css
@@ -164,3 +164,29 @@ margin-left: 100px;
 footer .row .col-md-3 p:hover{
     color: yellow;
 }
+
+
+/* media query */
+
+
+@media (max-width: 576px) {
+    .first .col-md-6 h1{
+        font-size: 40px;
+        font-weight: 700;
+    }
+
+    .col-md-6 img{
+        width: 100%;
+        height: 50vh;
+    }
+    .second .col-md-7 img{
+        width: 100%;
+        height: 50vh;
+    }
+    .third .card-group img{
+        background-color: #fff;
+        /* border: 2px solid red; */
+        /* height: 160px; */
+        width: 100%;
+    }
+}
